# hello

./: README.md
assembly/: hello.s
astro/: bun.lockb  package.json
astro/src/components/: Foot.astro
astro/src/pages/: about.astro  index.astro
c/: test.c
c/frogger/: frogger.c  input1
chef/: hello.chef
elysia/: bun.lockb
elysia/src/: index.ts
go/aws/: go.mod  go.sum  main.go
go/http_client/: go.mod  main.go
go/loggly_test/: go.mod  main.go
go/module_test/: go.mod  main.go
go/module_test/greetings/: main.go
go/reflection/: go.mod  main.go
go/reflection/example/: a.go  b.go  list.go
go/uuid_test/: go.mod  main.go
graphql/: .gitignore  README.md  bun.lockb  package.json
graphql/prisma/: dev.db  schema.prisma
graphql/prisma/prisma/: dev.db
graphql/src/: endpoints.ts  index.ts  resolvers.ts  schema.gql
graphql/src/drizzle/: index.ts  schema.ts
java/: SpanningTree.java
openliberty/: .gitignore  README.md  pom.xml
rabbitmq/: bun.lockb  package.json
rabbitmq/hello-world/: bun.lockb  package.json
rabbitmq/hello-world/src/: publisher.ts
rust/ezcat/: Cargo.toml
rust/graphql/: .gitignore  Cargo.toml  seed-migration.sql
rust/graphql/migrations/: 20250706175429_init.sql
rust/graphql/src/: config.rs  main.rs
rust/graphql/src/schema/: mod.rs  mutation.rs  post.rs  query.rs  root.rs  subscription.rs  user.rs
rust/jwt-play/: Cargo.toml
rust/neon/: Cargo.toml  package-lock.json  package.json
rust/rabbitmq/: Cargo.toml  Dockerfile  README.md
rust/simple-http-server/: Cargo.toml
springboot/: pom.xml
(+28 files in other folders)
