[package]
name = "graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
juniper = { version = "0.16.1", features = ["schema-language"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
