[package]
name = "graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
juniper = { version = "0.16.2", features = ["schema-language"] }
juniper_axum = { version = "0.2.0", features = ["subscriptions"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
